kubernetes/security/foundation/rate-limiting/tenants/drova/policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: drova-rate-limit
  namespace: drova
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: drova-app
  rateLimit:
    type: Global
    global:
      rules:
        - limit:
            requests: 300
            unit: Minute
          clientSelectors:
            - sourceCIDR:
                value: 0.0.0.0/0
                type: Distinct
        - limit:
            requests: 300
            unit: Minute
          clientSelectors:
            - sourceCIDR:
                value: ::/0
                type: Distinct
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: drova-jaeger-rate-limit
  namespace: drova
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: drova-jaeger
  rateLimit:
    type: Global
    global:
      rules:
        - limit:
            requests: 60
            unit: Minute
          clientSelectors:
            - sourceCIDR:
                value: 0.0.0.0/0
                type: Distinct
        - limit:
            requests: 60
            unit: Minute
          clientSelectors:
            - sourceCIDR:
                value: ::/0
                type: Distinct
